--- a/httpd.conf
+++ b/httpd.conf
@@ -13,5 +13,20 @@ DocumentRoot "/var/www/public_html"
     Require all granted
 </Directory>
 
+# Prevent virtualhosts from overriding localhost
+<VirtualHost *:80>
+        ServerName localhost
+        ServerAlias localhost
+        ServerAdmin webmaster@localhost
+
+        DocumentRoot /var/www/public_html
+
+    <Directory /var/www/public_html>
+        Options Indexes FollowSymLinks MultiViews
+        AllowOverride None
+        Require all granted
+    </Directory>
+</VirtualHost>
+
 # Virtual hosts
 IncludeOptional /etc/httpd/conf.d/virtualhosts/*.conf
