--- a/httpd.conf
+++ b/httpd.conf
@@ -1,9 +1,8 @@
-# Override defaults in /usr/share/defaults/httpd/httpd.conf 
+# Overwrite defaults in /usr/share/defaults/httpd/httpd.conf 
 
 # I need dem .htaccess files
 LoadModule rewrite_module lib64/httpd/mod_rewrite.so
 
-# Only used for a simple phpinfo() file, really.
 DocumentRoot "/var/www/public_html"
 <Directory "/var/www/public_html">
     Options Indexes FollowSymLinks
@@ -13,7 +12,7 @@ DocumentRoot "/var/www/public_html"
     Require all granted
 </Directory>
 
-# Prevent virtualhosts from overriding localhost
+# Prevent virtualhosts from hijacking localhost
 <VirtualHost *:80>
         ServerName localhost
         ServerAlias localhost
